<?xml version="1.0"?>
<package format="3">
  <name>body_tracker_msgs</name>
  <version>0.1.0</version>
  <description>body tracker custom message for skeleton tracking</description>
  <maintainer email="jinseok.kim970@gmail.com">Jinseok Kim</maintainer>
  <url>https://github.com/kemjensak</url>
  <license>Apache-2</license>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
